@@ -1,3 +1,4 @@
-21-02-2016
+05-03-2016
 Version 0.4.3.1
 fixed a bug in the states classification
+added options to save output of random sampler in a matrix
